--- a/config/database.yml
+++ b/config/database.yml
@@ -13,20 +13,20 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password:
+  username: ati
+  password: ati
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: myapp_development
+  database: atipro1_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: myapp_test
+  database: atipro1_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: myapp_production
-  username: myapp
+  database: atipro1_production
+  username: ati
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
