--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GMAIL_DOMAIN=gmail.com
-GMAIL_USERNAME=frankjdelgado@gmail.com
-GMAIL_PASSWORD=ElLimon2010*
+GMAIL_USERNAME=youremail@asd.com
+GMAIL_PASSWORD=yourpassword
